db changes and many tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,13 +11,18 @@ spring.mvc.view.suffix=.jsp
 # IF YOU USE THESE CONNECTION SETTINGS, YOU MUST ADD THE POSTGRESQL DEPENDENCY IN THE POM.XML DOCUMENT  #
 #########################################################################################################
 # The URL to your database
+
 #spring.datasource.url=jdbc:postgresql://localhost:5432/HBV
+spring.datasource.url=jdbc:mysql://localhost:3306/pms
 
 # User name and Password to your database
+spring.datasource.username=team20
 #spring.datasource.username=notandi
+spring.datasource.password=softproject1
 #spring.datasource.password=leyniord
 
 # What Driver to use
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 #spring.datasource.driver-class-name=org.postgresql.Driver
 
 # ============================= #
@@ -26,7 +31,7 @@ spring.mvc.view.suffix=.jsp
 
 # To offload the responsibility to create the database tables for our
 # entities to the DATA JPA system, we can use the following configuration
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # There are 5 possible values we can give this configuration, see below for what each one does
 # update      -> update the schema
