--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,19 @@
         	<artifactId>mysql-connector-java</artifactId>
         	<scope>runtime</scope>
         </dependency>
+        
+        <!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
+
+		<dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>6.0.13.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.3.7.Final</version>
+		</dependency>
     </dependencies>
 
     <build>
