--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,13 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.3.7.Final</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-jdbc</artifactId>
+			<version>2.1.1.RELEASE</version>
+			<type>pom</type>
+		</dependency>
     </dependencies>
 
     <build>
